Indicative comments in diffwebs.cfg

--- a/diffwebs.cfg
+++ b/diffwebs.cfg
@@ -1,3 +1,5 @@
+# Bitcoin diff
+
 [blockexplorer]
 coin = btc
 url = http://blockexplorer.com/q/getdifficulty
@@ -8,6 +10,8 @@ coin = btc
 url = http://blockexplorer.sytes.net/chain/Bitcoin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
+
+# Namecoin diff
 
 [dotbit]
 coin = nmc
@@ -39,6 +43,8 @@ url = http://namecoinpool.com/
 get_method = regexp
 pattern = Current difficulty:</td><td>([.0-9]+)</td>
 
+# Solidcoin diff
+
 [sccallchains]
 coin = scc
 url = http://allchains.info/calc.html
@@ -57,6 +63,8 @@ url = http://solidcoin.whmcr.co.uk/chain/SolidCoin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
 
+# IXcoin diff
+
 [ixcallchains]
 coin = ixc
 url = http://allchains.info/calc.html
@@ -69,6 +77,8 @@ url = http://blockexplorer.sytes.net/chain/Ixcoin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
 
+# I0coin diff
+
 [i0callchains]
 coin = i0c
 url = http://allchains.info/calc.html
@@ -80,3 +90,5 @@ coin = i0c
 url = http://blockexplorer.sytes.net/chain/I0coin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
+
+# Reserved for other currencies that have not yet been added to Bithopper
