Gen pools clean-up for closed and abandoned ones

--- a/pools.cfg
+++ b/pools.cfg
@@ -123,7 +123,7 @@ url: https://www.triplemining.com/account
 
 [eligius]
 coin:btc
-name: Eligius.st (PPS)
+name: Eligius.st (SMPPS)
 mine_address: su.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
 api_method: re
@@ -602,7 +602,7 @@ url: https://guildminers.com/account
 
 [yourbtc]
 coin:btc
-name: YourBtc.net (DGP)
+name: YourBtc.net (DGPM)
 mine_address: yourbtc.net:8332
 api_address: http://yourbtc.net
 api_method:re
