Added Masterpool.eu as a NMC pool, stats are sensitive to NMC json.

--- a/pools.cfg
+++ b/pools.cfg
@@ -647,3 +647,14 @@ api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
 api_strip: ','
 url: http://simplecoin.us
 
+[masterpoolnmc]
+coin:nmc
+name: MasterPool.eu (MergeM-Prop NMC)
+mine_address: US01.masterpool.eu:8888
+api_address: https://masterpool.eu/jsonstats
+api_method:json
+api_key: blockchains,NMC,shares
+api_key_ghashrate: hashrate
+api_key_duration: blockchains,NMC,roundduration
+url:https://masterpool.eu/dashboard
+
