--- a/pools.cfg
+++ b/pools.cfg
@@ -234,7 +234,11 @@ url: https://www.bitcoins.lc
 [btcg]
 coin:btc
 name: BTCGuild.com (Prop)
-mine_address: btcguild.com:8332   
+mine_address: btcguild.com:8332
+#api_address: https://www.btcguild.com/pool_stats.php
+#api_method: re_rate
+#api_key: "hash_rate":([ 0-9]+).
+#api_strip: ' '
 api_address: https://www.btcguild.com/index.php
 api_method: re
 api_key: <span id="shares_this_round" class="header_stat">([,0-9]+)<
