Fix the last added site in diffwebs.cfg and add Geist Geist in whatevercoins.cfg

--- a/whatevercoin.cfg
+++ b/whatevercoin.cfg
@@ -31,3 +31,10 @@ recent_difficulty = 54020.6623903
 site_exchange = https://btc-e.com/sc_exchanger
 pattern_site_exchange = Highest Bid Price<p><b><span id='max_price'>([0-9.]+)
 
+[coin5]
+long_name = Geist Geld
+short_name = geg
+recent_difficulty = 15.01306
+site_exchange = https://btc-e.com/exchange/gg_btc
+pattern_site_exchange = Highest Bid Price<p><b><span id='max_price'>([.0-9]+)
+
