--- a/diffwebs.cfg
+++ b/diffwebs.cfg
@@ -91,10 +91,10 @@ url = http://blockexplorer.sytes.net/chain/I0coin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
 
-#Gold Geist
+#Geist Geld
 [allchains]
-coin = gg
-url = allchains.info/index.html
+coin = geg
+url = http://allchains.info/index.html
 get_method = regexp
 pattern = gg </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [.0-9]+% </td><td align='right'> ([.0-9]+)
 
