Change to backup donation

--- a/pools.cfg
+++ b/pools.cfg
@@ -480,13 +480,16 @@ coin:btc
 name: Donation
 role: donation
 percent: 1
-mine_address: su.mining.eligius.st:8337
-user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
+#mine_address: su.mining.eligius.st:8337
+#user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 #Alternate donation pool
-#mine_address: arsbitcoin.com:8344
-#user: c00w.donation
+api_address: https://www.arsbitcoin.com/api.php
+api_method: json
+api_key: currentroundshares
+mine_address: arsbitcoin.com:8344
+user: c00w.donation
 pass: donation
-url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
+#url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 
 [scguild]
 coin:scc
