--- a/pools.cfg
+++ b/pools.cfg
@@ -233,7 +233,7 @@ url: https://www.bitcoins.lc
 
 [btcg]
 coin:btc
-name: BTCGuild.com (Prop)
+name: BTCGuild.com (PPS)
 mine_address: btcguild.com:8332
 #api_address: https://www.btcguild.com/pool_stats.php
 #api_method: re_rate
