Upd mtred info & cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -72,7 +72,7 @@ url: https://polmine.pl/?action=dashboardstat
 
 [mtred]
 coin:btc
-name: MtRed.com (PPS)
+name: MtRed.com (MergeM-PPS)
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
 api_method: json
