Upd asspenny info

--- a/pools.cfg
+++ b/pools.cfg
@@ -588,7 +588,7 @@ url: http://ix.digbtc.net/main.php
 
 [asspenny]
 coin:btc
-name: Keninishna's unlucky pool (Prop)
+name: Keninishna's unlucky pool (MergeM-Prop)
 mine_address: asspennypool.com:8443
 api_address: http://asspennypool.com/api.php?api_key=%(asspenny_user_apikey)s
 api_method: json
