Added Mt.Red NMC proportional pool

--- a/pools.cfg
+++ b/pools.cfg
@@ -666,3 +666,13 @@ api_key_ghashrate: hashrate
 api_key_duration: blockchains,NMC,roundduration
 url:https://masterpool.eu/dashboard
 
+[mtrednmc]
+coin:nmc
+name: MtRed.com (MergeM-Prop NMC)
+mine_address: mtred.com:8337
+api_address: https://mtred.com/api/stats
+api_method: json
+api_key: NMCroundshares
+api_key_ghashrate: hashrate
+url: https://mtred.com/user/profile.html
+
