--- a/pools.cfg
+++ b/pools.cfg
@@ -642,7 +642,7 @@ url: http://coinotron.com
 
 [simplecoin]
 coin:btc
-name: simplecoin.us (MergeM-Prop, SMPPS, PPLNS)
+name: Simplecoin.us (MergeM-Prop, SMPPS, PPLNS)
 mine_address: pool.simplecoin.us:8337
 #api_address: http://simplecoin.us/api.php
 #api_method: json
