Display btcworld hash rate

--- a/pools.cfg
+++ b/pools.cfg
@@ -109,6 +109,7 @@ mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
 api_method: re
 api_key: [Verifizierte Anteile der aktuellen Runde:]+</th><td>([,0-9]+)</td>
+api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://btcworld.de/dashboard
 
