--- a/pools.cfg
+++ b/pools.cfg
@@ -354,6 +354,7 @@ mine_address:pool.bloodys.com:8332
 api_address:http://pool.bloodys.com/?action=statistics
 api_method:re
 api_key:([0-9]+(,[0-9]+)*) Shares
+api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
 
