--- a/pools.cfg
+++ b/pools.cfg
@@ -210,6 +210,7 @@ mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
 api_method: re
 api_key: Valid\s+shares\s+for\s+current\s+round:</th><td>([,0-9]+)</td>
+api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://nmcbit.com/dashboard
 
