--- a/pools.cfg
+++ b/pools.cfg
@@ -376,6 +376,7 @@ name: BitHasher.com (Prop)
 mine_address: bithasher.com:8332
 api_address: http://bithasher.com
 api_method:re
+#api_key: Round Shares</td><td>([,0-9]+)<
 api_key: Round Shares</td><td>([,0-9]+)
 api_key_ghashrate: Hash Rate</td><td>([,0-9.]+)
 url: http://bithasher.com/index.php/account
