--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -95,3 +95,7 @@ mode = z
 type = btcmp
 json_url = http://btcmp.com/methods/pool/list_blocks
 
+[coinotron]
+url = http://coinotron.com/coinotron/AccountServlet?action=statistics
+search = href="http://blockexplorer.sytes.net/block/([0-9a-f]{64})"
+mode = h
