Small edit for coinotron

--- a/pools.cfg
+++ b/pools.cfg
@@ -637,7 +637,7 @@ url: http://www.bitpenny.com
 
 [coinotron]
 coin:btc
-name: coinotron.com (Score)
+name: Coinotron.com (Score)
 mine_address: coinotron.com:8322
 api_address: http://coinotron.com/coinotron/AccountServlet?action=home
 api_method: re_rateduration
