--- a/pools.cfg
+++ b/pools.cfg
@@ -614,11 +614,10 @@ url: https://guildminers.com/account
 coin:btc
 name: YourBtc.net (DGPM)
 mine_address: yourbtc.net:8999
-api_address: http://yourbtc.net
-api_method:re
-api_key: Round Shares:</strong> ([,0-9]+)
-api_strip:','
-api_key_ghashrate: Hashrate:</strong> ([0-9.]+) GHash/s 
+api_address: http://www.yourbtc.net/api.php
+api_method:json
+api_key: pool,round_shares
+api_key_ghashrate: pool,hashrate
 url: http://yourbtc.net
 
 [bitpenny]
