--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -99,3 +99,8 @@ json_url = http://btcmp.com/methods/pool/list_blocks
 url = http://coinotron.com/coinotron/AccountServlet?action=statistics
 search = href="http://blockexplorer.sytes.net/block/([0-9a-f]{64})"
 mode = h
+
+[nmcbitbtc]
+url = http://www.nmcbit.com/statistics
+search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
+mode = g
