--- a/pools.cfg
+++ b/pools.cfg
@@ -682,3 +682,13 @@ api_key: NMCroundshares
 api_key_ghashrate: hashrate
 url: https://mtred.com/user/profile.html
 
+[nmcbitbtc]
+coin:btc
+name: NMCBit.com (MergeM-Prop BTC)
+mine_address: nmcbit.com:8332
+api_address: http://www.nmcbit.com/statistics
+api_method: re_rateduration
+api_key_duration_hour_min: BTC Current round duration:</th><td>([0-9]+):([0-9]+):
+api_key_ghashrate: ([,0-9.]+) Ghash/s
+api_strip: ','
+url: http://nmcbit.com/dashboard
