--- a/pools.cfg
+++ b/pools.cfg
@@ -117,9 +117,14 @@ url: http://btcworld.de/dashboard
 coin:btc
 name: TripleMining.com (Prop)
 mine_address: eu1.triplemining.com:8344
-api_address: http://api.triplemining.com/json/stats
-api_method: json
-api_key: solved
+#api_address: http://api.triplemining.com/json/stats
+#api_method: json
+#api_key: solved
+api_address: https://www.triplemining.com/stats
+api_method: re
+api_key: <!-- 1000 -->([0-9]+( [0-9]+)*)</td>
+api_key_ghashrate: ([0-9.]+) GH/s
+api_strip:' '
 url: https://www.triplemining.com/account
 
 [eligius]
