--- a/pools.cfg
+++ b/pools.cfg
@@ -134,6 +134,7 @@ mine_address: su.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
 api_method: re
 api_key: id="instant_scount_5">([,0-9]+)</td>
+api_key_ghashrate: ([0-9.]+) GH/s
 api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
