disable yourbtc speed, broken on their side

--- a/pools.cfg
+++ b/pools.cfg
@@ -623,7 +623,7 @@ mine_address: yourbtc.net:8999
 api_address: http://www.yourbtc.net/api.php
 api_method:json
 api_key: pool,round_shares
-api_key_ghashrate: pool,hashrate
+#api_key_ghashrate: pool,hashrate  - broken on their side
 url: http://yourbtc.net
 
 [bitpenny]
