Added ozco, bloodys, yourbtc

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -104,3 +104,17 @@ mode = h
 url = http://www.nmcbit.com/statistics
 search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
+
+[ozco]
+url = https://ozco.in/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+
+[bloodys]
+url = http://pool.bloodys.com/?action=statistics
+search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
+mode = g
+
+[yourbtc]
+url = http://www.yourbtc.net/content/overview-bitcoin
+search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
+mode = g
