Upd ozco mine address

--- a/pools.cfg
+++ b/pools.cfg
@@ -41,7 +41,7 @@ url: http://swepool.net/profile
 [ozco]
 coin:btc
 name: OzCo.in (Prop)
-mine_address: ozco.in:8332
+mine_address: us.ozco.in:8999
 api_address: https://ozco.in/api.php
 api_method: json
 api_key: shares
