Added Round Time for bloodys

--- a/pools.cfg
+++ b/pools.cfg
@@ -362,6 +362,7 @@ api_address:http://pool.bloodys.com/?action=statistics
 api_method:re
 api_key:([0-9]+(,[0-9]+)*) Shares
 api_key_ghashrate: ([,0-9.]+) Ghash/s
+api_key_duration_hour_min: Current Round: ([0-9]+):([0-9]+) hours
 api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
 
