Added round time for bithasher

--- a/pools.cfg
+++ b/pools.cfg
@@ -386,6 +386,7 @@ api_method:re
 #api_key: Round Shares</td><td>([,0-9]+)<
 api_key: Round Shares</td><td>([,0-9]+)
 api_key_ghashrate: Hash Rate</td><td>([,0-9.]+)
+api_key_duration_hour_min: Round Time</td><td>([0-9]+):([0-9]+):
 url: http://bithasher.com/index.php/account
 
 [kiwipool]
