Added round time for btcmine

--- a/pools.cfg
+++ b/pools.cfg
@@ -418,6 +418,7 @@ api_method:re
 api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
 api_strip:''
 api_key_mhashrate: <td><span id="rs_hashrate">([0-9.]+)
+api_key_duration_hour_min: <td><span id="rs_roundtime">([0-9]+):([0-9]+):
 url: http://btcmine.com
 
 [i0g]
