Added round time display for simplecoin

--- a/pools.cfg
+++ b/pools.cfg
@@ -667,6 +667,7 @@ api_address: http://simplecoin.us/stats.php?pool_id=3
 api_method: re
 api_key: Current BTC Round Shares</td><td>([,0-9]+)</td>
 api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
+api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
 api_strip: ','
 url: http://simplecoin.us
 
