Added round time display for eligius

--- a/pools.cfg
+++ b/pools.cfg
@@ -135,6 +135,7 @@ api_address: http://eligius.st/~artefact2/
 api_method: re
 api_key: id="instant_scount_5">([,0-9]+)</td>
 api_key_ghashrate: ([0-9.]+) GH/s
+api_key_duration_hour_min: "instant_durationh_5">([,0-9]+)h</td><td class="ralign" id="instant_durationm_5">([,0-9]+)m
 api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
