Added round time display bcpool if using json

--- a/pools.cfg
+++ b/pools.cfg
@@ -307,6 +307,7 @@ api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" a
 #api_key: round_shares
 #api_key_ghashrate: hashrate
 #api_key_duration: round_duration
+#api_key_duration_day_hour_min: (\d+):(\d+):(\d+):
 url: http://bitcoinpool.com
 
 [unitedminers]
