Added round time display for masterpool

--- a/pools.cfg
+++ b/pools.cfg
@@ -452,6 +452,7 @@ api_method:json
 api_key: blockchains,BTC,shares
 api_key_ghashrate: hashrate
 api_key_duration: blockchains,BTC,roundduration
+api_key_duration_sec: (\d+)
 url:https://masterpool.eu/dashboard
 
 [namebit]
