--- a/pools.cfg
+++ b/pools.cfg
@@ -399,6 +399,7 @@ api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=nore
 api_method: re
 api_key: [:0-9]+[,]([0-9]+)
 api_key_ghashrate: current\s+hash\s+rate\W+([0-9]+)
+api_key_duration_hour_min: ([0-9]+):([0-9]+):
 api_strip:''
 url: http://www.kiwipool.me
 
