--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -118,3 +118,7 @@ mode = g
 url = http://www.yourbtc.net/content/overview-bitcoin
 search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
+
+[mkalinin]
+url = http://pool.mkalinin.ru/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
