--- a/pools.cfg
+++ b/pools.cfg
@@ -706,3 +706,15 @@ api_key_duration_hour_min: BTC Current round duration:</th><td>([0-9]+):([0-9]+)
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://nmcbit.com/dashboard
+
+[mkalinin]
+coin:btc
+name: Mkalinin.ru (PPLNS)
+mine_address: pool.mkalinin.ru:8344 
+api_address: http://pool.mkalinin.ru/api.php
+api_method: json
+api_key: shares
+api_key_mhashrate: hashrate
+api_key_duration: roundduration
+api_key_duration_sec: (\d+)
+url: http://pool.mkalinin.ru/blocks.php
