--- a/pools.cfg
+++ b/pools.cfg
@@ -658,7 +658,7 @@ mine_address: coinotron.com:8322
 api_address: http://coinotron.com/coinotron/AccountServlet?action=home
 api_method: re_rateduration
 api_key_ghashrate: BTC</td>\r\n<td style="text-align: right;">   ([0-9]+.)
-api_key_duration_hour_min: [0-9]+</td>\W+<td style="text-align: right;">([ 0-9]+)h([ 0-9]+)m</td>
+api_key_duration_hour_min: <td style="text-align: right;">([ 0-9]+) h</td>\W<td></td>
 url: http://coinotron.com
 
 [simplecoin]
