--- a/pools.cfg
+++ b/pools.cfg
@@ -248,13 +248,13 @@ coin:btc
 name: BTCGuild.com (PPS)
 mine_address: btcguild.com:8332
 api_method: disable
-#api_address: https://www.btcguild.com/pool_stats.php
-#api_method: re_rate
-#api_key: "hash_rate":([ 0-9]+).
-#api_strip: ' '
-api_address: https://www.btcguild.com/index.php
-api_method: re
-api_key: <span id="shares_this_round" class="header_stat">([,0-9]+)<
+api_address: https://www.btcguild.com
+api_method: re_rate
+api_key: <td>([0-9])+
+api_strip: ''
+#api_address: https://www.btcguild.com/index.php
+#api_method: re
+#api_key: <span id="shares_this_round" class="header_stat">([,0-9]+)<
 url: http://www.btcguild.com/my_account.php
 
 [mineco]
