I make minor corrections in api.py, diff.py, exchange.py, pool_class.py and scheduler.py, plus add 4 sites and correct 2 (of allchains) in diffwebs.cfg

--- a/diffwebs.cfg
+++ b/diffwebs.cfg
@@ -51,15 +51,21 @@ url = http://allchains.info/calc.html
 get_method = regexp
 pattern = id='sc_diff' maxlength='[0-9]+' size='[0-9]+' value='([.0-9]+)'
 
-[sccsytes]
+[sccoino]
 coin = scc
-url = http://blockexplorer.sytes.net/chain/SolidCoin?count=1
+url = http://coinotron.com/coinotron/AccountServlet?action=home
 get_method = regexp
-pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
+pattern = <td style="text-align: left;">SC</td>\r\n<td style="text-align: right;">\s+[.0-9]+ [GM]H</td>\r\n<td style="text-align: right;">[0-9]+</td>\r\n<td style="text-align: right;">[\shm0-9]+</td>\r\n<td style="text-align: center;">[\s.0-9-]+</td>\r\n<td style="text-align: right;">\s+([0-9]+)</td>
 
 [whmcr]
 coin = scc
 url = http://solidcoin.whmcr.co.uk/chain/SolidCoin?count=1
+get_method = regexp
+pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
+
+[sccsytes]
+coin = scc
+url = http://blockexplorer.sytes.net/chain/SolidCoin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
 
@@ -69,7 +75,7 @@ pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+
 coin = ixc
 url = http://allchains.info/calc.html
 get_method = regexp
-pattern = id='ixc_diff' maxlength='[0-9]+' size='[0-9]+' value='([.0-9]+)'
+pattern = i0c </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+M </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [.0-9]+% </td><td align='right'> ([.0-9]+)
 
 [ixcsytes]
 coin = ixc
@@ -77,13 +83,19 @@ url = http://blockexplorer.sytes.net/chain/Ixcoin?count=1
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
 
+[ixcoino]
+coin = ixc
+url = http://coinotron.com/coinotron/AccountServlet?action=home
+get_method = regexp
+pattern = <td style="text-align: left;">IXC</td>\r\n<td style="text-align: right;">\s+[.0-9]+ [GM]H</td>\r\n<td style="text-align: right;">[0-9]+</td>\r\n<td style="text-align: right;">[\shm0-9]+</td>\r\n<td style="text-align: center;">[\s.0-9-]+</td>\r\n<td style="text-align: right;">\s+([0-9]+)</td>
+
 # I0coin diff
 
 [i0callchains]
 coin = i0c
 url = http://allchains.info/calc.html
 get_method = regexp
-pattern = id='i0c_diff' maxlength='[0-9]+' size='[0-9]+' value='([.0-9]+)'
+pattern = i0c </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+M </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [.0-9]+% </td><td align='right'> ([.0-9]+)
 
 [i0csytes]
 coin = i0c
@@ -96,6 +108,18 @@ pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+
 coin = geg
 url = http://allchains.info/index.html
 get_method = regexp
-pattern = gg </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [.0-9]+% </td><td align='right'> ([.0-9]+)
+pattern = gg </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+M </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [0-9]+ </td><td align='right'> [.0-9]+% </td><td align='right'> ([.0-9]+)
+
+[gegsytes]
+coin = geg
+url = http://blockexplorer.sytes.net/chain/GeistGeld?count=1
+get_method = regexp
+pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
+
+[simplegeg]
+coin = geg
+url = http://simplecoin.us/stats.php?pool_id=6
+get_method = regexp
+pattern = Current GG Difficulty</th><td><a href="http://dot-bit.org/tools/nextDifficulty.php">([.0-9]+)
 
 # Reserved for other currencies that have not yet been added to Bithopper
