Upd triple info + moved to new alt payouts

--- a/pools.cfg
+++ b/pools.cfg
@@ -118,7 +118,7 @@ url: http://btcworld.de/dashboard
 
 [triple]
 coin:btc
-name: TripleMining.com (Prop)
+name: TripleMining.com (PPLNS)
 mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
 api_method: json
