--- a/pools.cfg
+++ b/pools.cfg
@@ -437,7 +437,7 @@ url: http://bitfarms.ca/
 
 [masterpool]
 coin:btc
-name: MasterPool.eu (MergeM-Prop)
+name: MasterPool.eu (MergeM-PPLNS)
 mine_address: US01.masterpool.eu:8888
 api_address: https://masterpool.eu/jsonstats
 api_method:json
