Reorg pplns, dgm pools

--- a/pools.cfg
+++ b/pools.cfg
@@ -269,7 +269,7 @@ url: https://mineco.in/workers
 
 [eclipsemc]
 coin:btc
-name: EclipseMC.com (Score)
+name: EclipseMC.com (DGM)
 mine_address: pacrim.eclipsemc.com:8337
 api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
 api_method: json_ec
