new mining address for yourbtc.net

--- a/pools.cfg
+++ b/pools.cfg
@@ -613,7 +613,7 @@ url: https://guildminers.com/account
 [yourbtc]
 coin:btc
 name: YourBtc.net (DGPM)
-mine_address: yourbtc.net:8999
+mine_address: mining.yourbtc.net:8999
 api_address: http://yourbtc.net
 api_method:re
 api_key: Round Shares:</strong> ([,0-9]+)
