--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -122,3 +122,8 @@ mode = g
 [mkalinin]
 url = http://pool.mkalinin.ru/blocks.php
 search = href="http://blockexplorer.com/b/([0-9]+)"
+
+[gputech]
+url = https://gputech.net/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+
