Upd polmine info + cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -52,7 +52,7 @@ url: https://ozco.in/blocks.php
 
 [polmine]
 coin:btc
-name: PolMine.pl (Prop)
+name: PolMine.pl (PPS)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
 api_method: re_rateduration
@@ -62,7 +62,7 @@ url: https://polmine.pl/?action=dashboardstat
 
 [oldpolmine]
 coin:btc
-name: PolMine.pl (Prop)
+name: PolMine.pl (PPS)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
 api_method: re
