Update donation address to use btcproxy.net

--- a/pools.cfg
+++ b/pools.cfg
@@ -491,15 +491,18 @@ coin:btc
 name: Donation
 role: donation
 percent: 1
-#mine_address: su.mining.eligius.st:8337
-#user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
-#Alternate donation pool
 api_address: https://www.arsbitcoin.com/api.php
 api_method: json
 api_key: currentroundshares
-mine_address: arsbitcoin.com:8344
-user: c00w.donation
-pass: donation
+mine_address: btcproxy.net:0
+user: bhdonate
+pass: bhdonate
+#mine_address: arsbitcoin.com:8344
+#user: c00w.donation
+#pass: donation
+#mine_address: su.mining.eligius.st:8337
+#user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
+#Alternate donation pool
 #url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 
 [scguild]
