Make mtrednmc strip ,'s

--- a/pools.cfg
+++ b/pools.cfg
@@ -686,6 +686,7 @@ mine_address: mtred.com:8337
 api_address: https://mtred.com/api/stats
 api_method: json
 api_key: NMCroundshares
+api_strip:','
 api_key_ghashrate: hashrate
 url: https://mtred.com/user/profile.html
 
