--- a/pools.cfg
+++ b/pools.cfg
@@ -645,7 +645,7 @@ name: Coinotron.com (Score)
 mine_address: coinotron.com:8322
 api_address: http://coinotron.com/coinotron/AccountServlet?action=home
 api_method: re_rateduration
-api_key_ghashrate: BTC</td>\r\n<td style="text-align: right;">   ([0-9]+.)
+api_key_ghashrate: BTC</td>\s.*>\s*([0-9]+)[.]
 api_key_duration_hour_min: BTC</td>\s.*\s.*\s.*>([0-9]+) h ?([0-9]+)? ?m?</td>
 url: http://coinotron.com
 
