--- a/pools.cfg
+++ b/pools.cfg
@@ -40,7 +40,7 @@ url: http://swepool.net/profile
 
 [ozco]
 coin:btc
-name: OzCo.in (Prop)
+name: OzCo.in (DGM)
 mine_address: us.ozco.in:8999
 api_address: https://ozco.in/api.php
 api_method: json
