Small fix with bitclockers

--- a/pools.cfg
+++ b/pools.cfg
@@ -181,7 +181,7 @@ api_method: json
 api_key: roundshares
 api_key_mhashrate: hashrate
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
-url: https://bitclockers.com/dashboard
+url: https://bitclockers.com
 
 [nofeemining]
 coin:btc
