--- a/pools.cfg
+++ b/pools.cfg
@@ -386,7 +386,7 @@ url: http://bithasher.com/index.php/account
 coin:btc
 name: KiwiPool.me (Prop)
 mine_address: pool2.kiwipool.me:8332
-api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=norefer
+api_address: http://kiwipool.me
 api_method: re
 api_key: [:0-9]+[,]([0-9]+)
 api_key_ghashrate: current\s+hash\s+rate\W+([0-9]+)
