Added Simplecoin and Asspenny for block verification

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -127,3 +127,13 @@ search = href="http://blockexplorer.com/b/([0-9]+)"
 url = https://gputech.net/blocks.php
 search = href="http://blockexplorer.com/b/([0-9]+)"
 
+[asspenny]
+url = http://asspennypool.com/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+mode = b
+
+[simplecoin]
+url = http://simplecoin.us/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+mode = b
+
