Fixed NMCbitBTC to scrape shares and not guess based off duration

--- a/pools.cfg
+++ b/pools.cfg
@@ -696,7 +696,8 @@ coin:btc
 name: NMCBit.com (MergeM-Prop BTC)
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
-api_method: re_rateduration
+api_method: re
+api_key: BTC\s+Current\s+round\s+duration:</th><td>[0-9]+:[0-9]+:[0-9]+\s+hours</td></tr><tr><th\W+align="right">Valid\s+shares\s+for\s+current\s+round:</th><td>([,0-9]+)
 api_key_duration_hour_min: BTC Current round duration:</th><td>([0-9]+):([0-9]+):
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
