--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -106,8 +106,9 @@ search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
 [ozco]
-url = https://ozco.in/blocks.php
-search = href="http://blockexplorer.com/b/([0-9]+)"
+url = http://www.ozco.in/content/overview-bitcoin
+search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
+mode = g
 
 [bloodys]
 url = http://pool.bloodys.com/?action=statistics
