Added backup config for bclc using "mine" role.  For those who can suffer delayed stats instead of trying to mine_lp.

--- a/pools.cfg
+++ b/pools.cfg
@@ -241,6 +241,9 @@ api_address: http://www.bitcoins.lc/stats.json
 api_method: re_rate
 re_rate_type: None
 api_key: "hash_rate":([ 0-9]+).
+#api_method: json
+#api_key: valid_round_shares
+#api_key_hashrate: hash_rate
 url: https://www.bitcoins.lc
 
 [btcg]
