--- a/pools.cfg
+++ b/pools.cfg
@@ -204,14 +204,11 @@ api_key_mhashrate: speed
 url: http://poolmunity.com
 
 [bitparking]
-coin:nmc
-name: BitParking.com (NMC)
-mine_address: bitparking.com:9098
-api_address: http://bitparking.com/pool
-api_method: re
-api_key: block</td><td>([ 0-9]+)</td>
-api_strip: ' '
-url: http://bitparking.com/user/%(user)s
+coin:btc
+name: BitParking.com (MergeM-PPS)
+mine_address: mmpool.bitparking.com:15098
+api_address: http://mmpool.bitparking.com/pool
+url: http://mmpool.bitparking.com/user/%(user)s
 
 [nmcbit]
 coin:nmc
