Updated Ozco.in for the new json format

--- a/pools.cfg
+++ b/pools.cfg
@@ -40,14 +40,13 @@ url: http://swepool.net/profile
 
 [ozco]
 coin:btc
-name: OzCo.in (DGM)
+name: OzCo.in (MergeM-DGM)
 mine_address: us.ozco.in:8999
-api_address: https://ozco.in/api.php
-api_method: json
-api_key: shares
-api_key_mhashrate: hashrate
-api_key_duration: roundduration
-api_key_duration_sec: (\d+)
+api_address: http://ozco.in/api.php
+api_method:json
+api_key: pool,round_shares
+api_key_mhashrate: pool,hashrate_raw
+api_key_duration_day_hour_min: (\d+)d (\d+)h (\d+)m
 url: https://ozco.in/blocks.php
 
 [polmine]
