--- a/pools.cfg
+++ b/pools.cfg
@@ -648,7 +648,7 @@ mine_address: coinotron.com:8322
 api_address: http://coinotron.com/coinotron/AccountServlet?action=home
 api_method: re_rateduration
 api_key_ghashrate: ([0-9]+(?:\.[0-9]*)?) GH</td>
-api_key_duration_hour_min: ([ 0-9]+) h</td>\s\D+\d\.([ 0-9])
+api_key_duration_hour_min:  (\d+) h ?(\d+)? ?m?
 api_strip: ''
 url: http://coinotron.com
 
