--- a/pools.cfg
+++ b/pools.cfg
@@ -132,14 +132,14 @@ url: https://www.triplemining.com/account
 [eligius]
 coin:btc
 name: Eligius.st (MergeM-SMPPS)
-mine_address: su.mining.eligius.st:8337
+mine_address: ra.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
 api_method: re
-api_key: id="instant_scount_5">([,0-9]+)</td>
+api_key: id="instant_scount_7">([,0-9]+)</td>
 api_key_ghashrate: ([0-9.]+) GH/s
-api_key_duration_hour_min: "instant_durationh_5">([,0-9]+)h</td><td class="ralign" id="instant_durationm_5">([,0-9]+)m
+api_key_duration_hour_min: "instant_durationh_7">([,0-9]+)h</td><td class="ralign" id="instant_durationm_7">([,0-9]+)m
 api_strip: ','
-url: http://eligius.st/~artefact2/5/%(user)s
+url: http://eligius.st/~artefact2/7/%(user)s
 
 [arsbitcoin]
 coin:btc
