bitclockers api fix

--- a/pools.cfg
+++ b/pools.cfg
@@ -175,12 +175,12 @@ url: https://www.ninjacoin.com/account.php
 coin:btc
 name: BitClockers.com (Prop)
 mine_address: pool.bitclockers.com:8332
-api_address: http://bitclockers.com/api.json
+api_address: http://bitclockers.com/api
 api_method: json
 api_key: roundshares
 api_key_mhashrate: hashrate
-user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
-url: https://bitclockers.com
+user_api_address: http://bitclockers.com/api/%(bitclockers_user_apikey)s
+url: http://bitclockers.com/dashboard
 
 [nofeemining]
 coin:btc
