--- a/pools.cfg
+++ b/pools.cfg
@@ -711,3 +711,23 @@ api_method: json
 api_key: shares
 api_key_mhashrate: hashrate
 url: http://pool.mkalinin.ru/blocks.php
+
+[a1]
+coin:btc
+name: A1BitcoinPool.com (Prop)
+mine_address: a1bitcoinpool.com:8999
+api_address: http://www.a1bitcoinpool.com/stats.php
+api_method: re_rateduration
+api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
+api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
+url: https://www.a1bitcoinpool.com/accountdetails.php
+
+[alex]
+coin:btc
+name: Alex's Pool (Prop)
+mine_address: pool.schaetter.us:8337
+api_address: http://pool.schaetter.us/stats.php
+api_method: re_rateduration
+api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
+api_key_duration_hour_min: Time Since Last Block</td><td><span\W+class="red">([0-9]+) Hours ([0-9]+) Minutes
+url: https://pool.schaetter.us/accountdetails.php
