--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -138,3 +138,12 @@ url = http://simplecoin.us/blocks.php
 search = href="http://blockexplorer.com/b/([0-9]+)"
 mode = b
 
+[a1]
+url = http://a1bitcoinpool.com/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+mode = b
+
+[alex]
+url = http://pool.schaetter.us/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+mode = b
