--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -106,7 +106,7 @@ search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
 [ozco]
-url = http://ozco.in/content/block-history-bitcoin
+url = https://ozco.in/content/block-history-bitcoin
 search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
