Updated Ozco.in's api address

--- a/pools.cfg
+++ b/pools.cfg
@@ -42,7 +42,7 @@ url: http://swepool.net/profile
 coin:btc
 name: OzCo.in (MergeM-DGM)
 mine_address: us.ozco.in:8332
-api_address: http://ozco.in/api.php
+api_address: https://ozco.in/api.php
 api_method:json
 api_key: pool,round_shares
 api_key_mhashrate: pool,hashrate_raw
