Example slush payout info

--- a/pools.cfg
+++ b/pools.cfg
@@ -15,6 +15,9 @@ api_key_ghashrate: ghashes_ps
 api_key_duration: round_duration
 api_key_duration_hour_min: (\d+):(\d+):
 url: http://mining.bitcoin.cz/accounts/profile/
+payout_scheme: score
+payout_c: 300
+payout_merged_mining: true
 
 [deepbit]
 coin:btc
