Added a bunch of payout_scheme info

--- a/pools.cfg
+++ b/pools.cfg
@@ -28,6 +28,7 @@ api_method: re_rate
 api_key: [rate:&nbsp;]+([0-9]+)+&nbsp;Gh/s
 api_strip: ''
 url: https://deepbit.net/stats
+payout_scheme:prop
 
 [swepool]
 coin:btc
@@ -51,6 +52,7 @@ api_key: pool,round_shares
 api_key_mhashrate: pool,hashrate_raw
 api_key_duration_day_hour_min: (\d+)d (\d+)h (\d+)m
 url: https://ozco.in/blocks.php
+payout_scheme:prop
 
 [polmine]
 coin:btc
@@ -61,6 +63,7 @@ api_method: re_rateduration
 api_key_ghashrate: <b> ([\.0-9]+)</b> Ghash
 api_key_duration_day_hour_min: </b> <br/>([ 0-9]+)dni([ 0-9]+)godzin([ 0-9]+)minut
 url: https://polmine.pl/?action=dashboardstat
+payout_scheme: pps
 
 [oldpolmine]
 coin:btc
@@ -117,6 +120,7 @@ api_key: [Verifizierte Anteile der aktuellen Runde:]+</th><td>([,0-9]+)</td>
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://btcworld.de/dashboard
+payout_scheme:prop
 
 [triple]
 coin:btc
@@ -131,6 +135,7 @@ api_key: solved
 #api_key_ghashrate: ([0-9.]+) GH/s
 #api_strip:' '
 url: https://www.triplemining.com/account
+payout_scheme: pplns
 
 [eligius]
 coin:btc
@@ -143,6 +148,8 @@ api_key_ghashrate: ([0-9.]+) GH/s
 api_key_duration_hour_min: "instant_durationh_7">([,0-9]+)h</td><td class="ralign" id="instant_durationm_7">([,0-9]+)m
 api_strip: ','
 url: http://eligius.st/~artefact2/7/%(user)s
+payout_merged_mining: true
+payout_scheme: smpps
 
 [arsbitcoin]
 coin:btc
@@ -153,6 +160,7 @@ api_method: json
 api_key: currentroundshares
 api_key_mhashrate: hashrate
 url: https://arsbitcoin.com/my_stats.php
+payout_scheme: pps
 
 [bitp]
 coin:btc
@@ -173,6 +181,7 @@ api_method: re_rate
 api_key:Hashrate:([ 0-9]+).
 api_strip: ' '
 url: https://www.ninjacoin.com/account.php
+payout_scheme: pps
 
 [bitclockers]
 coin:btc
@@ -184,6 +193,7 @@ api_key: roundshares
 api_key_mhashrate: hashrate
 user_api_address: http://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: http://bitclockers.com/dashboard
+payout_scheme:prop
 
 [nofeemining]
 coin:btc
@@ -194,6 +204,7 @@ api_method: json
 api_key: poolRoundShares
 api_key_ghashrate: poolspeed
 url: https://nofeemining.appspot.com
+payout_scheme: rsmpps
 
 [poolmunity]
 coin:btc
@@ -222,6 +233,8 @@ api_key: Valid\s+shares\s+for\s+current\s+round:</th><td>([,0-9]+)</td>
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://nmcbit.com/dashboard
+payout_scheme: pps
+payout_merged_mining: true
 
 [x8s]
 coin:btc
@@ -244,6 +257,7 @@ api_key: "hash_rate":([ 0-9]+).
 #api_key: valid_round_shares
 #api_key_hashrate: hash_rate
 url: https://www.bitcoins.lc
+payout_scheme:prop
 
 [btcg]
 coin:btc
@@ -258,6 +272,7 @@ api_strip: ''
 #api_method: re
 #api_key: <span id="shares_this_round" class="header_stat">([,0-9]+)<
 url: http://www.btcguild.com/my_account.php
+payout_scheme: pps
 
 [mineco]
 coin:btc
@@ -268,6 +283,7 @@ api_method: json
 api_key: shares_this_round
 api_key_hashrate: hashrate
 url: https://mineco.in/workers
+payout_scheme: pplns
 
 [eclipsemc]
 coin:btc
@@ -277,6 +293,7 @@ api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=pools
 api_method: json_ec
 api_key: round_shares
 url: https://eclipsemc.com
+payout_scheme: dgm
 
 [mmf]
 coin:btc
@@ -302,6 +319,7 @@ api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" a
 #api_key_duration: round_duration
 #api_key_duration_day_hour_min: (\d+):(\d+):(\d+):
 url: http://bitcoinpool.com
+payout_scheme:prop
 
 [unitedminers]
 coin:btc
@@ -348,6 +366,7 @@ api_key: shares
 #api_key: </span> ([,0-9]+) shares
 #api_strip: ","
 url: https://btcserv.net/user/round-stats/
+payout_scheme: pps
 
 [bloodys]
 coin:btc
@@ -360,6 +379,7 @@ api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_key_duration_hour_min: Current Round: ([0-9]+):([0-9]+) hours
 api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
+payout_scheme:prop
 
 [digbtc]
 coin:btc
@@ -383,6 +403,7 @@ api_key: Round Shares</td><td>([,0-9]+)
 api_key_ghashrate: Hash Rate</td><td>([,0-9.]+)
 api_key_duration_hour_min: Round Time</td><td>([0-9]+):([0-9]+):
 url: http://bithasher.com/index.php/account
+payout_scheme:prop
 
 [kiwipool]
 coin:btc
@@ -395,6 +416,7 @@ api_key_ghashrate: current\s+hash\s+rate\W+([0-9]+)
 api_key_duration_hour_min: ([0-9]+):([0-9]+):
 api_strip:''
 url: http://www.kiwipool.me
+payout_scheme:prop
 
 [itzod]
 coin:btc
@@ -404,6 +426,7 @@ api_address: https://pool.itzod.ru/api.php
 api_method: json
 api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
+payout_scheme: smpps
 
 [btcmine]
 coin:btc
@@ -416,6 +439,7 @@ api_strip:''
 api_key_mhashrate: <td><span id="rs_hashrate">([0-9.]+)
 api_key_duration_hour_min: <td><span id="rs_roundtime">([0-9]+):([0-9]+):
 url: http://btcmine.com
+payout_scheme:score
 
 [i0g]
 coin:i0c
@@ -448,6 +472,8 @@ api_key_ghashrate: hashrate
 api_key_duration: blockchains,BTC,roundduration
 api_key_duration_sec: (\d+)
 url:https://masterpool.eu/dashboard
+payout_scheme: pplns
+payout_merged_mining: true
 
 [namebit]
 coin:nmc
@@ -478,6 +504,7 @@ api_method: re_rate
 api_key: <span class="stat">([0-9]+) GH/s</span>
 api_strip: ''
 url: http://www.abcpool.co/stats.php
+payout_scheme: pps
 
 [p2pool]
 coin:btc
@@ -487,6 +514,7 @@ api_address: http://localhost:8332
 api_method: disable
 api_key: code
 url: https://en.bitcoin.it/wiki/P2Pool
+payout_scheme: pplns
 
 [donation]
 coin:btc
@@ -611,6 +639,8 @@ api_method: json
 api_key: shares
 api_key_mhashrate: poolhash
 url: http://asspennypool.com
+payout_scheme:prop
+payout_merged_mining: true
 
 [guildminers]
 coin:btc
@@ -621,6 +651,7 @@ api_method: re
 api_key: ([,0-9]+) shares
 api_strip: ','
 url: https://guildminers.com/account
+payout_scheme:prop
 
 [yourbtc]
 coin:btc
@@ -631,6 +662,7 @@ api_method:json
 api_key: pool,round_shares
 #api_key_ghashrate: pool,hashrate  - broken on their side
 url: http://yourbtc.net
+payout_scheme: dgm
 
 [bitpenny]
 coin:btc
@@ -643,6 +675,7 @@ re_rate_type: mhash
 api_key_duration_hour_min: time since last block: ([0-9]+):([0-9]+):
 #api_strip: '.'
 url: http://www.bitpenny.com
+payout_scheme: pps
 
 [coinotron]
 coin:btc
@@ -654,6 +687,7 @@ api_key_ghashrate: ([0-9]+(?:\.[0-9]*)?) GH</td>
 api_key_duration_hour_min:  (\d+) h ?(\d+)? ?m?
 api_strip: ''
 url: http://coinotron.com
+payout_scheme:prop
 
 [simplecoin]
 coin:btc
@@ -670,6 +704,8 @@ api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
 api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
 api_strip: ','
 url: http://simplecoin.us
+payout_scheme:prop
+payout_merged_mining: true
 
 [masterpoolnmc]
 coin:nmc
@@ -692,6 +728,8 @@ api_key: NMCroundshares
 api_strip:','
 api_key_ghashrate: hashrate
 url: https://mtred.com/user/profile.html
+payout_scheme: pps
+payout_merged_mining: true
 
 [nmcbitbtc]
 coin:btc
@@ -704,6 +742,8 @@ api_key_duration_hour_min: BTC Current round duration:</th><td>([0-9]+):([0-9]+)
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://nmcbit.com/dashboard
+payout_merged_mining: true
+payout_scheme: prop
 
 [mkalinin]
 coin:btc
@@ -714,6 +754,7 @@ api_method: json
 api_key: shares
 api_key_mhashrate: hashrate
 url: http://pool.mkalinin.ru/blocks.php
+payout_scheme: pplns
 
 [a1]
 coin:btc
